PyPi 1.2.0dev1 : timem + @PYTHON_EXECUTABLE@ instead of env python
- PyPi release 1.2.0dev1
- added timem python script
- replace /usr/bin/env python with @PYTHON_EXECUTABLE@
- c interface now can now print
- all functions in signal_detection are lower-case and "_" separated

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,8 @@
 include CMakeLists.txt
 include .version.txt
 include LICENSE
-include .LICENSE
+include .license.c
+include .license.py
 include README.md
 include CHANGES.rst
 include timemory/timemory.py
