delay initialization of manager timers due to strange segfault only on Travis
- also removed using "get_prefix" member function in initialization of manager.
- fixes to timem.py
- addition of timem.cpp
- improved RSS validity measurement

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -218,6 +218,12 @@ export(TARGETS ${INSTALL_LIBRARIES}
 
 
 #------------------------------------------------------------------------------#
+# timem wrapper tool
+#
+add_subdirectory(tools)
+
+
+#------------------------------------------------------------------------------#
 # Python bindings
 #
 if(TIMEMORY_USE_PYTHON_BINDING)
