--- a/source/python/tools/CMakeLists.txt
+++ b/source/python/tools/CMakeLists.txt
@@ -7,10 +7,10 @@
 
 # copy over the python file
 configure_file(${CMAKE_CURRENT_LIST_DIR}/timem.py
-    ${PROJECT_BINARY_DIR}/tools/timem @ONLY)
+    ${PROJECT_BINARY_DIR}/pytimem @ONLY)
 
 # timem installation
-install(FILES ${PROJECT_BINARY_DIR}/tools/timem
+install(FILES ${PROJECT_BINARY_DIR}/pytimem
     DESTINATION ${TIMEMORY_INSTALL_BINDIR}
     COMPONENT python
     PERMISSIONS
