--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -91,11 +91,11 @@ install:
       }
       conda update -y -q -n base conda
       conda install -y -q pip
-      python -m pip install -U pip
+      %PYTHON_EXE% -m pip install -U pip
     }
     # pip installation
-    python -m pip install -U setuptools disttools
-    python -m pip install -U matplotlib numpy pillow
+    %PYTHON_EXE% -m pip install -U setuptools disttools
+    %PYTHON_EXE% -m pip install -U matplotlib numpy pillow
     $env:TIMEMORY_DEBUG = 4
     mkdir "C:\Users\appveyor\CTestTemp"
     $env:TEMP = "C:\Users\appveyor\CTestTemp"
