--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ endif(CMAKE_VERSION VERSION_LESS 3.1.3)
 if(GOOD_CMAKE)
     cmake_policy(SET CMP0048 NEW)
     cmake_policy(SET CMP0042 NEW)
+    #cmake_policy(SET CMP0054 NEW)
     project(TiMemory LANGUAGES C CXX VERSION ${TIMEMORY_VERSION})
 else(GOOD_CMAKE)
     project(TiMemory C CXX)
