CDash/CTest updates + cdash.nersc.gov
- migrated CDash dashboard to cdash.nersc.gov (requires token + https)
- fixed double submission in cdash/Submit.cmake

--- a/cmake/Templates/cdash/Submit.cmake.in
+++ b/cmake/Templates/cdash/Submit.cmake.in
@@ -9,7 +9,11 @@ set(TRIGGER "Submit" CACHE STRING "Delay submit until TRIGGER == '(Any|Build|Tes
 
 include("${CMAKE_CURRENT_LIST_DIR}/Init.cmake")
 
-setup(Submit)
+unset(CTEST_CHECKOUT_COMMAND)
+configure_ctest_files()
+ctest_start(${MODEL}   TRACK ${MODEL} APPEND)
+configure_ctest_files()
+ctest_read_custom_files("${CTEST_BINARY_DIRECTORY}")
 submit(Submit RETRY_COUNT 5 RETRY_DELAY 30)
 
 message(" -- Finished ${MODEL} Submission - ${CTEST_BUILD_NAME} --")
