--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 # build-types: Release, Debug, RelWithDebInfo, MinSizeRel
 build_type=Release
 # use mpi
-use_mpi=ON
+use_mpi=OFF
 # throw exception in signal handler instead of exit
 timemory_exceptions=OFF
 # will always be OFF on Windows
