--- a/cmake/Templates/CTestCustom.cmake.in
+++ b/cmake/Templates/CTestCustom.cmake.in
@@ -19,3 +19,7 @@ set_custom(CTEST_DROP_METHOD    "${_DROP_METHOD}")
 set_custom(CTEST_DROP_SITE      "${_DROP_SITE}")
 set_custom(CTEST_DROP_LOCATION  "${_DROP_LOCATION}")
 set_custom(CTEST_TOKEN_FILE     "${_TOKEN_FILE}")
+
+find_program(CTEST_GIT_COMMAND NAMES git)
+set(CTEST_UPDATE_TYPE "git")
+set(CTEST_UPDATE_COMMAND "${CTEST_GIT_COMMAND}")
