--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -16,6 +16,9 @@ add_executable(${TIMEM_NAME} timem.cpp)
 
 target_link_libraries(${TIMEM_NAME} ${LIBNAME}-cxx-library ${EXTERNAL_LIBRARIES})
 
+set_target_properties(${TIMEM_NAME} PROPERTIES
+    COMPILE_FLAGS ${${PROJECT_NAME}_CXX_FLAGS})
+
 # timem installation
 install(TARGETS ${TIMEM_NAME}
     DESTINATION ${TIMEMORY_INSTALL_BINDIR}
