--- a/examples/ex-cxx-overhead/CMakeLists.txt
+++ b/examples/ex-cxx-overhead/CMakeLists.txt
@@ -1,12 +1,6 @@
-cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
-
-if(CMAKE_VERSION VERSION_LESS 3.1.3)
-    set(GOOD_CMAKE OFF)
-else(CMAKE_VERSION VERSION_LESS 3.1.3)
-    set(GOOD_CMAKE ON)
-    cmake_policy(SET CMP0048 NEW)
-endif(CMAKE_VERSION VERSION_LESS 3.1.3)
+cmake_minimum_required(VERSION 3.1.3 FATAL_ERROR)
 cmake_policy(SET CMP0042 NEW)
+cmake_policy(SET CMP0048 NEW)
 
 #------------------------------------------------------------------------------#
 project(TiMemory-CXX-Overhead-Example C)
@@ -18,7 +12,12 @@ foreach(_DIR ${TiMemory_INCLUDE_DIRS})
     include_directories(SYSTEM ${_DIR})
 endforeach(_DIR ${TiMemory_INCLUDE_DIRS})
 
+if(NOT DEFINED CMAKE_CXX_STANDARD)
+    set(CMAKE_CXX_STANDARD 11)
+endif(NOT DEFINED CMAKE_CXX_STANDARD)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TiMemory_C_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TiMemory_CXX_FLAGS}")
 
 #------------------------------------------------------------------------------#
 # Add the executable, and link it to the TiMemory libraries
