--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -8,6 +8,8 @@ include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@ConfigVersion.cmake)
 #------------------------------------------------------------------------------#
 set(@PROJECT_NAME@_C_FLAGS "@TiMemory_C_FLAGS@")
 set(@PROJECT_NAME@_CXX_FLAGS "@TiMemory_CXX_FLAGS@ -std=c++@CMAKE_CXX_STANDARD@")
+set(@PROJECT_NAME@_C_COMPILE_OPTIONS @TiMemory_C_FLAGS@)
+set(@PROJECT_NAME@_CXX_COMPILE_OPTIONS @TiMemory_CXX_FLAGS@)
 set(TIMEMORY_USE_MPI @MPI_FOUND@)
 set(TIMEMORY_EXCEPTIONS @TIMEMORY_EXCEPTIONS@)
 set(TIMEMORY_PYTHON_BINDINGS @TIMEMORY_USE_PYTHON_BINDING@)
